fix compilation errors in test sources