@@ -11,6 +11,7 @@ import drivebackup.DriveBackupFile;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -95,11 +96,11 @@ public class LocalDirectoryTest {
     directory.findOrCreateDirectory("subfolder_2");
     directory.saveOrUpdateFile(localFile2);
 
-    directory.deleteAllExceptOf(List.of("subfolder_2", localFile2.getName()));
+    directory.deleteAllExceptOf(Arrays.asList("subfolder_2", localFile2.getName()));
 
     List<String> subDirsNames =
         directory.getSubDirectories().map((d) -> d.getName()).collect(Collectors.toList());
-    assertEquals(List.of("subfolder_2"), subDirsNames);
+    assertEquals(Arrays.asList("subfolder_2"), subDirsNames);
 
     List<DriveBackupFile> files = directory.getFiles().collect(Collectors.toList());
     assertEquals(1, files.size());
